<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_products" android:title="@string/products" />
    <item android:id="@+id/menu_categories" android:title="@string/categories" />
    <item android:id="@+id/menu_ingredients" android:title="@string/ingredients" />
    <item android:id="@+id/menu_recipes" android:title="@string/recipes" />
    <item android:id="@+id/menu_stock" android:title="@string/stock" />
    <item android:id="@+id/menu_orders" android:title="@string/orders" />
    <item android:id="@+id/menu_profile" android:title="@string/profile" />
    <item android:id="@+id/menu_seed" android:title="Carregar dados de exemplo" />
    <item android:id="@+id/menu_logout" android:title="@string/logout" />
</menu>
